fix image alignment, change About icon to Seats Awards section not implemented

--- a/snippets/menu-item.html
+++ b/snippets/menu-item.html
@@ -3,7 +3,7 @@
     <div class="col-sm-5">
       <div class="menu-item-photo">
         <br />
-        <img class="img-responsive" width="250" height="150" src="images/{{id}}.jpg" alt="Item" align="center">
+        <img class="img-responsive center-block" width="250" height="150" src="images/{{id}}.jpg" alt="Item" align="center">
       </div>
     </div>
     <div class="menu-item-description col-sm-7">
