--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li>
               <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Seats</a>
             </li>
             <li>
               <a href="#">
