--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
             <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Seats</a>
+              <a href="#" onclick="$dc.loadMenuItems('SP');">
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Specials</a>
             </li>
             <li>
               <a href="#">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Seats</a>
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:778-397-9955">
