--- a/snippets/menu-item.html
+++ b/snippets/menu-item.html
@@ -8,7 +8,8 @@
     </div>
     <div class="menu-item-description col-sm-7">
       <h3 class="menu-item-title">{{name}}</h3>
-      <p class="menu-item-details">{{description}}</p>
+      <p class="menu-item-details">{{description}} <br />
+      {{price_large}}</p>
     </div>
   </div>
   <hr class="visible-xs">
